fix card overflow-x

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -238,7 +238,8 @@ div#card {
   height: 100%;
   background:#F4F4F4;
   padding: 32px 32px 32px 68px;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   color:black;
   box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.25);
   @include until($tablet){
